@@ -329,21 +329,13 @@ int Uc_const_int_symbol::gen_value
 	Basic_block *out
 	)
 	{
-	if (want_byte)
-		{
-		WriteOp(out, (char) UC_PUSHB);
+	WriteOp(out, (char) opcode);
+	if (opcode == UC_PUSHB)
 		WriteOpParam1(out, value);
-		}
-	else if (!is_sint_32bit(value))
-		{
-		WriteOp(out, (char) UC_PUSHI);
+	else if (opcode == UC_PUSHI)
 		WriteOpParam2(out, value);
-		}
 	else
-		{
-		WriteOp(out, (char) UC_PUSHI32);
 		WriteOpParam4(out, value);
-		}
 	return 1;
 	}
 
@@ -355,7 +347,7 @@ Uc_expression *Uc_const_int_symbol::create_expression
 	(
 	)
 	{
-	return new Uc_int_expression(value, want_byte);
+	return new Uc_int_expression(value, opcode);
 	}
 
 /*
